added Constructor for Frame.h
lots of formatting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 3.28)
 project(ReactionGame)
 
 # set values
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_DEFAULT 11)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_DEFAULT 23)
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 file(GLOB_RECURSE SRC "include/*.h" "include/*.hpp" "src/*.cpp")
 # get value from environmental variables
