added Unittest for: - Point - Label - GTBoundingBox - Frame (rough skeleton of Unittestfile)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,13 +2,13 @@ cmake_minimum_required(VERSION 3.8)
 
 set(This ReactionGameTest)
 
-set(Sources ReactionGameTest.cpp)
+file(GLOB_RECURSE Sources ./*.cpp)
 
 add_executable(${This} ${Sources})
-
 target_link_libraries(${This} PUBLIC
         gtest_main
         ReactionGame
+        ${OpenCV_LIBS}
 )
 
 add_test(
