made 80% of classes const correct added a few sentences in README.md added error message in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,8 @@ file(GLOB_RECURSE SRC include/*.h include/*.hpp src/*/*.cpp)
 if (NOT "$ENV{OPEN_CV_PATH}" STREQUAL "")
     set(OpenCV_DIR "$ENV{OPEN_CV_PATH}" CACHE INTERNAL "Acquired opencv path from environmental variables")
 else ()
-    message(FATAL_ERROR "opencv has not been found, this build process requires opencv as an essential library.
-    Please set the open cv path manually in this CMakeLists.txt under the variable name \"OpenCV_DIR\" or
-    set OPEN_CV_PATH in your environmental variables. The path should end with \"../build/install/\".")
+    message(FATAL_ERROR "opencv has not been found, this build process requires opencv as an essential library. Please set the open cv path manually in this CMakeLists.txt under the variable name \"OpenCV_DIR\" or set OPEN_CV_PATH in your environmental variables. The path should end with \".../build/install/\".\nSetup manual for opencv:
+1. create a folder for opencv\n2. Download the sourcecode for opencv from github https://github.com/opencv/opencv/releases/tag/4.10.0 to the created folder\n3. unzip the file\n4. create a build folder in the folder you created\n5. open cmake gui (download it first if you dont already have it)\n6. set sources to the unziped folder\n7. set \"where to build binaries\" on the build folder\n8. Click configure, select MinGW Makefiles and start it\n9. click generate when the process has finished\n10. switch to the build folder\n11. open a cmd in the build folder by pressing control+l and typing cmd\n12. type mingw32-make.exe install (if mingw23-make.exe has not been found, download a portable version of mingw from https://winlibs.com/ and unzip it. Search for mingw32-make.exe and retry the command with the absolute path of the portable mingw32-make.exe (put the path in quotation marks))\n\t Note: try adding \"-j4\" if you have 4 cpu cores, or try a higher number if you have even more cores\n13. In the build folder there should now be a folder named install which contains opencv\n14. Create an environmental variable named \"OPEN_CV_PATH\" which points to the install folder\n15. As a final step add \".../build/install/x64/mingw/bin\" to your windows path variable and restart your pc")
 endif ()
 
 include(FetchContent)
